--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -31,7 +31,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-right: 5%;
+    width: 65%;
 }
 
 .navLink {
@@ -294,6 +294,11 @@ figcaption {
 
     #currentProjectImage {
         min-width: 70%;
+    }
+
+    nav {
+        width: initial;
+        margin-right: 5%;
     }
 }
 
